# epd-datafuri

./: Cargo.toml  README.md
examples/adafruit_magtag/: Cargo.toml
examples/adafruit_magtag/src/: main.rs
examples/adafruit_magtag_legacy/: Cargo.toml
examples/adafruit_magtag_legacy/src/: main.rs
src/: lib.rs
src/displays/: adafruit_thinkink_290_mfgn.rs  adafruit_thinkink_290_t5.rs  mod.rs
src/driver/: il0373.rs  mod.rs  ssd1680.rs
src/graphics/: display290_gray4_mfgn.rs  display290_gray4_t5.rs  display290_mono.rs  mod.rs
src/interface/: mod.rs
